# Bengali-BPE-Tokenizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark.py  bpe.py  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithm.md  gen_benchmark_plot.py
examples/: corpus.txt
fertility_aware_tokenizer/: bpe_merge_summary.json  fertility_research.ipynb  tokenizer_comparison.csv
src/bpe/: __init__.py  cli.py  decoder.py  encoder.py  tokenizer.py  trainer.py  unicode_utils.py  utils.py  vocabulary.py
tests/: test_tokenizer.py  test_trainer.py  test_unicode_utils.py  test_vocabulary.py
