[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bengali-bpe"
version = "0.1.0"
description = "Byte Pair Encoding from scratch for Bengali and non-Latin scripts"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nawaz", email = "nawazhaider60@gmail.com" }]
requires-python = ">=3.9"
keywords = ["nlp", "tokenizer", "bpe", "bengali", "unicode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "pre-commit",
]
viz = [
    "matplotlib",
]

[project.scripts]
bpe = "bpe.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/bengali-bpe"
Repository = "https://github.com/your-org/bengali-bpe"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 99
target-version = ["py39", "py311"]

[tool.ruff]
line-length = 99
select = ["E", "F", "W", "I", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/bpe"]
omit = ["*/tests/*"]
